tests/sksl/errors/OverflowIntLiteral.glsl
### Compilation failed:

error: 4: integer is out of range for type 'int': -2147483649
error: 6: integer is out of range for type 'int': 2147483648
error: 9: integer is out of range for type 'ushort4': -1
error: 9: integer is out of range for type 'ushort4': 65536
error: 14: integer is out of range for type 'short4': -32769
error: 14: integer is out of range for type 'short4': 32768
error: 19: integer is out of range for type 'int4': -2147483649
error: 19: integer is out of range for type 'int4': 2147483648
error: 24: integer is out of range for type 'uint4': -2147483648
error: 24: integer is out of range for type 'uint4': -2147483649
10 errors
